# inotify

./: .gitignore  AUTHORS  COPYING  ChangeLog  INSTALL  Makefile.am  README  configure.ac
c_src/: Makefile.am  erl_comm.c  erl_comm.h  inotify_erlang.c
src/: Makefile  Makefile.am  inoteefy.erl  inotify.erl  inotify.hrl  inotify_driver.c  inotify_erlang.c  inotify_erlang.h  iwatch.erl  test.erl
